--- a/Zork/Zork.vcxproj.filters
+++ b/Zork/Zork.vcxproj.filters
@@ -74,5 +74,8 @@
     <ClInclude Include="Global.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NameCommands.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
